--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -11,12 +11,15 @@ crossorigin="anonymous">
 
 </head>
 <body>
+<div class="container text-center">
+
+	<!-- signup section div starting here... -->
 <form action="#" th:action="@{/customer/save}" th:object="${customer}"
-            method="POST">
+            method="POST" onsubmit="return validateform()">
 
 <div id="main" class="text-center">
 	<div class="h-tag">
-	<h2>Create Your Account</h2>
+	<h2 class = "mt-3">Create Your Account</h2>
 	<div th:if="${message}">
 	<span th:text="${message}"></span></div>
 	</div>
@@ -39,32 +42,37 @@ crossorigin="anonymous">
 	<td align="right">Enter Password :</td>
 	<td><input type="password" th:field="*{password}" placeholder="Enter Password here" id="t4" class="tb" /></td>
 	</tr>
+
 	<tr>
 	<td align="right">Enter Confirm Password :</td>
 	<td><input type="password" placeholder="Enter Password here" id="t5" class="tb" />
-	
 	</td>
 	</tr>
 	
 	<tr>
 	<td align="right">Enter Your gender :</td>
-	<td><input type="radio" value="male" th:field="*{gender}" id="t5" class="tb" /> Male
-	   <input type="radio"  th:field="*{gender}" value="female" id="t5" class="tb"/> Female 
+	<td><input type="radio" value="male" th:field="*{gender}" id="t6" class="tb" /> Male
+	   <input type="radio"  th:field="*{gender}" value="female" id="t6" class="tb"/> Female 
 	</td>
 	</tr>
 	
 	<tr>
-	<td></td>
 	<td>
-	<input type="reset" value="Clear Form" onclick="clearFunc()" id="res" class="btn" />
-	<input type="submit" value="Create Account" class="btn" onclick="registration()" /></td>
+	<input type="reset" value="Clear Form" onclick="clearFunc()"  class="btn tb" />
+	<input type="submit" value="Create Account" class="btn tb" onclick="registration()"/></td>
 	</tr>
 	</table>
 	</div>
-	<!-- create account box ending here.. -->
 	</div>
-	<!-- Main div ending here... -->
+	<!-- signup section div ending here... -->
 	</form>
+</div>
+
+<!-- Login section div ending here... -->
+</div>
+
+</div>
+</div>
 
 
 
