--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,82 +1,57 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>SignUp Here !!</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
-integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" 
-crossorigin="anonymous">
-
-<link rel="stylesheet" th:href="@{/style.css}">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" th:href="@{/style.css}">
+	<style>
+	</style>
 </head>
 <body>
-<div class="container text-center">
+	<!-- Navbar -->
+	
+	<div class="navbar" id="myNavbar">
+		<a href="#" th:href="@{/customer/registration}" class="icon1">Home</a>
+		<a href="#" class="icon1" th:href="@{/customer/registration}">SignUp</a>
+		<a href="#" class="icon1">Login</a>
+		<a href="#" class="icon1">Contact</a>
+		<a href="#" class="icon" onclick="myFunction()">
+			<i class="fa fa-bars"></i>
+		</a>
+	</div>
 
-	<!-- signup section div starting here... -->
-<form action="#" th:action="@{/customer/save}" th:object="${customer}"
+       <div id="main" class="text-center" > 
+        <div th:if="${message}">
+        <span th:text="${message}"></span></div>
+        </div>
+
+    <form action="#" th:action="@{/customer/save}" th:object="${customer}"
             method="POST" onsubmit="return validateform()">
+		<label for="name">Name:</label>
+		<input type="text"  th:field="*{name}" placeholder="Enter your name" id="t1">
 
-<div id="main" class="text-center">
-	<div class="h-tag">
-	<h2 class = "mt-3">Create Your Account</h2>
-	<div th:if="${message}">
-	<span th:text="${message}"></span></div>
-	</div>
-	<!-- create account div -->
-	<div class="login">
-	<table cellspacing="2" align="center" cellpadding="8" border="0">
-	<tr>
-	<td align="right">Enter Name :</td>
-	<td><input type="text" th:field="*{name}" placeholder="Enter user here" id="t1" class="tb" /></td>
-	</tr>
-	<tr>
-	<td align="right">Enter Email ID :</td>
-	<td><input type="text" th:field="*{email}" placeholder="Enter Email ID here" id="t2" class="tb" /></td>
-	</tr>
-	<tr>
-	<td align="right">Enter Username :</td>
-	<td><input type="text" th:field="*{username}" placeholder="Enter Username here" id="t3" class="tb" /></td>
-	</tr>
-	<tr>
-	<td align="right">Enter Password :</td>
-	<td><input type="password" th:field="*{password}" placeholder="Enter Password here" id="t4" class="tb" /></td>
-	</tr>
+		<label for="email">Email:</label>
+		<input type="email"  th:field="*{email}" placeholder="Enter your email" id="t2">
 
-	<tr>
-	<td align="right">Enter Confirm Password :</td>
-	<td><input type="password" placeholder="Enter Password here" id="t5" class="tb" />
-	</td>
-	</tr>
-	
-	<tr>
-	<td align="right">Enter Your gender :</td>
-	<td><input type="radio" value="male" th:field="*{gender}" id="t6" class="tb" /> Male
-	   <input type="radio"  th:field="*{gender}" value="female" id="t6" class="tb"/> Female 
-	</td>
-	</tr>
-	
-	<tr>
-	<td>
-	<input type="reset" value="Clear Form" onclick="clearFunc()"  class="btn tb" />
-	<input type="submit" value="Create Account" class="btn tb" onclick="registration()"/></td>
-	</tr>
-	</table>
-	</div>
-	</div>
-	<!-- signup section div ending here... -->
+        <label for="email">Username:</label>
+		<input type="text"  th:field="*{username}" placeholder="Enter your username" id="t3">
+
+        <label for="email">Password:</label>
+		<input type="password"  th:field="*{Password}" placeholder="Enter your password" id="t4">
+
+        <label for="email">Confirm Password:</label>
+		<input type="password"  name="Confirm_password" placeholder="Enter your Confirm password" id="t5">
+
+        <label for="male">Male:</label>
+         <input type="radio" th:field="*{gender}" value="male" class="gender">
+         <label for="female">female:</label>
+        <input type="radio" th:field="*{gender}" value="female" class="gender">
+    
+
+		<input type="submit" value="submit" class="btn">
+        <input type="reset" value="Reset" class="btn">
 	</form>
-</div>
 
-<!-- Login section div ending here... -->
-</div>
-
-</div>
-</div>
-
-
-
-<script th:src="@{/myscript.js}"></script>
+	<script type="text/javascript" th:src="@{/myscript.js}"></script>
 
 </body>
 </html>
